add repoDisplay components and import into oppositeTimeline

--- a/react-front-end/src/components/OppositeTimeline.css
+++ b/react-front-end/src/components/OppositeTimeline.css
@@ -1,4 +1,4 @@
-/* repoDisplay css */
+/* repoDisplay css
 
 .box{
     position: relative;
@@ -44,7 +44,7 @@
 
 #created-at {
     margin-top: 15px;
-}
+} */
 
 /* timeline css */
 
