--- a/react-front-end/src/components/OppositeTimeline.css
+++ b/react-front-end/src/components/OppositeTimeline.css
@@ -1,3 +1,53 @@
+/* repoDisplay css
+
+.box{
+    position: relative;
+    display:flex;
+    flex-direction: column;
+    width: 100%;
+    font-size: 10px;
+  }
+
+.info{
+    display: flex;
+    align-self: center;
+    align-items: center;
+    margin-top: 0.5em;
+    padding-top: 10px;
+}
+
+.info p {
+    padding-top: 20px;
+    padding-left: 5px;
+}
+
+
+.like_btn{
+    position: absolute;
+    top: 5px;
+    right: 5px;
+}
+
+.box h3 {
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    font-size: 18px;
+}
+
+.repo-content {
+    margin-top: 40px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+#created-at {
+    margin-top: 15px;
+} */
+
+/* timeline css */
+
 body{margin-top:20px;
   background:#eee;
   }
