--- a/react-front-end/src/components/AppBar.css
+++ b/react-front-end/src/components/AppBar.css
@@ -1,10 +1,3 @@
-.text-field {
-  color: white;
-  margin-bottom: 18px;
-  padding-left: 5px;
-}
-
-.login-form {
-  display: flex;
-  flex-direction: row;
+.form-control-plaintext {
+  height: 15px;
 }
