--- a/react-front-end/src/components/repoDisplay/RepoDisplay.css
+++ b/react-front-end/src/components/repoDisplay/RepoDisplay.css
@@ -3,7 +3,7 @@
   display:flex;
   flex-direction: column;
   width: 100%;
-  font-size: 10px;
+  font-size: 15px;
 }
 
 .info{
@@ -44,3 +44,66 @@
   margin-top: 15px;
 }
 
+@media (min-width: 1920px) {
+  .box{
+    position: relative;
+    display:flex;
+    flex-direction: column;
+    width: 100%;
+    font-size: 20px;
+  }
+  
+  .info{
+    display: flex;
+    align-self: center;
+    align-items: center;
+    margin-top: 25px;
+    padding-top: 10px;
+  }
+  
+  .info p {
+    padding-top: 20px;
+    padding-left: 5px;
+  }
+  
+  
+  .like_btn{
+    position: absolute;
+    top: 5px;
+    right: 5px;
+  }
+  
+  .box h3 {
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    font-size: 20px;
+  }
+  
+  .repo-content {
+    margin-top: 40px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  
+  #created-at {
+    margin-top: 15px;
+  }
+
+  .MuiButton-label {
+    font-size: 20px;
+  }
+
+  .MuiSvgIcon-root like_btn {
+    font-size: 30px;
+  }
+
+  .MuiTableContainer-root th  {
+    font-size: 20px;
+  }
+
+  .MuiTableContainer-root td  {
+    font-size: 20px;
+  }
+}
