--- a/react-front-end/src/components/App.css
+++ b/react-front-end/src/components/App.css
@@ -8,6 +8,8 @@
   pointer-events: none;
 }
 
+.leaflet-container {  width: 100vw;  height: 100vh; }
+
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
@@ -35,4 +37,20 @@
 .leaflet-container {
   width: 100%;
   height: 100vh;
+}
+
+nav {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  min-height: 10vh;
+  background: rgb(65, 65, 65);
+  color: white;
+}
+
+.nav-links {
+  width: 50%;
+  display: flex;
+  justify-content: space-around;
+  list-style: none;
 }
