debugging nav bar and recomposition of dom, updating logos

--- a/react-front-end/src/components/App.scss
+++ b/react-front-end/src/components/App.scss
@@ -2,8 +2,8 @@
 
 html, body {
   margin: 0 auto;
-  width:0vw;
+  // width:0vw;
   overflow: hidden;
-  display: flex;
-  justify-content: center;
+  // display: flex;
+  // justify-content: center;
 }
