--- a/react-front-end/src/components/styles/variables.scss
+++ b/react-front-end/src/components/styles/variables.scss
@@ -8,6 +8,7 @@ $black: #000;
 
 $dark-background: #0c1824;
 $dark-grey-background: #0e0f0f;
+$dark-grey-background-opacity: #0e0f0f75;
 $accent: #3DED9D;
 $accent-red: #BA3B61;
 
