adding styled chips to trendinghash view

--- a/react-front-end/src/components/styles/variables.scss
+++ b/react-front-end/src/components/styles/variables.scss
@@ -9,7 +9,7 @@ $black: #000;
 $dark-background: #0c1824;
 $dark-grey-background: #0e0f0f;
 $dark-grey-background-opacity: #0e0f0f75;
-$accent: #3DED9D;
+$accent: #1DE9B6;
 $accent-red: #BA3B61;
 
 $weeks-colors: #54a0ff, #48dbfb, #1dd1a1, #5f27cd;
