--- a/react-front-end/src/components/RightTweets/RightTweets.scss
+++ b/react-front-end/src/components/RightTweets/RightTweets.scss
@@ -9,29 +9,48 @@
   flex-direction: column;
   justify-content: flex-start;
   align-items: center;
-  height: 90vh;
-  margin-top: 35vh;
+  height: 65%;
+  margin-top: 19%;
   margin-right: 2vh;
   position: absolute;
   right: 0;
   top: 0;
   color: white;
   border-radius: 15px;
+  overflow: scroll;
+  overflow-x: hidden;
+
+  &::-webkit-scrollbar {
+    width: 5px;
+  }
+  
+ &::-webkit-scrollbar-track {
+    background: $dark-grey-background-opacity;
+  }
+  
+  &::-webkit-scrollbar-thumb {
+    background-color: $accent;   
+    border-radius: 5px;
+  }
+  & {
+    scrollbar-width: thin;
+    scrollbar-color: $dark-grey-background-opacity $white-inactive;
+  }
 
   article {
     display: flex;
     flex-direction: column;
-    min-height: 7em;
     width: 90%;
     justify-content: center;
     align-content: flex-start;
-    overflow: auto;
+    overflow: visible;
     background-color: $white-inactive;
     color: $black-inactive;
     border-radius: 15px;
     box-shadow: 13px 15px 15px -3px rgba(0, 0, 0, 0.404);
-    margin: 3vh auto;
+    margin: 1.5vh auto;
     transition: 0.3s;
+
 
     &:hover {
       box-shadow: 20px 20px 10px -2px rgba(0, 0, 0, 0.74);
@@ -39,18 +58,14 @@
       color: $black-active;
       
       .profile {
-        font-weight: 700;
+        font-weight: bold;
         color: #183e72c7;
       }
       .handle {
-        font-weight: 500;
+        font-weight: bold;
         color: #7EA4A9;
-        margin-right: 1.4em;
       }
-      .tweeter img {
-        height: 3rem;
-        margin-left: .7em;
-      }
+
     }
 
     .tweeter {
@@ -72,7 +87,7 @@
     .handle {
       margin-right: 1em;
       color: #7EA4A9;
-      font-weight: 500;
+      font-weight: 700;
       font-size: .9rem;
       transition: 0.3s;
     }
@@ -90,7 +105,7 @@
       align-self: center;
       width: 90%;
       font-size: 1.1rem;
-      font-weight: 200;
+      font-weight: thin;
       color: #2f2f2f;
       word-wrap: anywhere;
       margin-bottom: 1em;
