adding local font to match logo

--- a/react-front-end/src/components/LeftSearch.scss
+++ b/react-front-end/src/components/LeftSearch.scss
@@ -10,8 +10,8 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  height: 90vh;
-  margin-top: 35vh;
+  height: 65%;
+  margin-top: 19%;
   // margin-bottom: 1vh;
   margin-left: 2vh;
   position:absolute;
