--- a/react-front-end/src/components/styles/variables.scss
+++ b/react-front-end/src/components/styles/variables.scss
@@ -1,10 +1,10 @@
-$font-family: "Source Sans Pro", sans-serif;
+$font-family: "UniNeue", sans-serif;
 
 $active-opacity: 1;
 $inactive-opacity: 0.15;
 
 $white: #fff;
-$white-inactive: #ffffffd0;
+$white-inactive: #ffffffb4;
 $white-active: #ffffffe3;
 $black: #000;
 $black-active: rgba(0, 0, 0, 0.938);
@@ -12,7 +12,7 @@ $black-inactive: rgba(0, 0, 0, 0.787);
 
 $dark-background: #0c1824;
 $dark-grey-background: #0e0f0f;
-$dark-grey-background-opacity: #0e0f0fe7;
+$dark-grey-background-opacity: #0e0f0ff1;
 $accent: #1DE9B6;
 $accent-red: #BA3B61;
 
