--- a/react-front-end/src/components/LeftSearch.scss
+++ b/react-front-end/src/components/LeftSearch.scss
@@ -4,18 +4,18 @@
 .leftsearch {
   background-color: $black;
   opacity: .6;
-  width: 30vw;
-  min-width: 300px;
+  width: 30%;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   height: 65%;
-  margin-top: 19%;
-  // margin-bottom: 1vh;
+  margin-bottom: 1.2%;
   margin-left: 2vh;
   position:absolute;
   left: 0;
+  bottom: 0;
+
   color: white;
-  border-radius: 15px;
+  border-radius: 0px 15px 15px 0px;
 }
