--- a/react-front-end/src/components/RightTweets/RightTweets.scss
+++ b/react-front-end/src/components/RightTweets/RightTweets.scss
@@ -3,20 +3,20 @@
 
 .righttweets {
   background-color: $dark-grey-background-opacity;
-  width: 30vw;
-  min-width: 300px;
+  width: 30%;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
   align-items: center;
   height: 65%;
-  margin-top: 19%;
+  margin-bottom: 1.2%;
   margin-right: 2vh;
   position: absolute;
   right: 0;
-  top: 0;
+  bottom: 0;
+  
   color: white;
-  border-radius: 15px;
+  border-radius: 15px 0px 0px 15px;
   overflow: scroll;
   overflow-x: hidden;
 
