--- a/react-front-end/src/components/LeftSearch.scss
+++ b/react-front-end/src/components/LeftSearch.scss
@@ -15,7 +15,9 @@
   position:absolute;
   left: 0;
   bottom: 0;
-
+  padding: 2px;
+  overflow: scroll;
+  overflow-x: hidden;
   color: white;
   border-radius: 0px 15px 15px 0px;
 }
