--- a/react-front-end/src/components/App.scss
+++ b/react-front-end/src/components/App.scss
@@ -80,9 +80,11 @@ html, body {
     height: 80px;
     width: 80px;
     z-index: 1;
+    box-shadow: 0px 0px 15px -3px #BA3B61;
     &:hover {
       background-color: $accent;
       color: $black-active;
+      box-shadow: 0px 0px 22px -7px #1DE9B6;
     }
   }
   .tweet-icon {
@@ -95,9 +97,11 @@ html, body {
     height: 80px;
     width: 80px;
     z-index: 1;
+    box-shadow: 0px 0px 15px -3px #BA3B61;
     &:hover {
       background-color: $accent;
       color: $black-active;
+      box-shadow: 0px 0px 22px -7px #1DE9B6;
     }
   }
 
