removing grid lines from map

--- a/react-front-end/src/components/Map/Map.scss
+++ b/react-front-end/src/components/Map/Map.scss
@@ -1,8 +1,11 @@
 .map {
   // color: white;   
   // margin-top: 7vh;
-  width: 99vw;
+  // width: 100%;
   .gm-style > div:not(:first-child) { display: none; }
-  
+ 
+  .gm-style div {
+    -webkit-transform: scale(1.022);
+}
 }
 
