updating file name of LeftData to be suitable and updating imports/components

--- a/react-front-end/src/components/LeftData.scss
+++ b/react-front-end/src/components/LeftData.scss
@@ -1,7 +1,7 @@
 @import "styles/variables.scss";
 
 
-.leftsearch {
+.leftData {
   background-color: $dark-grey-background-opacity;
   width: 33%;
   display: flex;
