--- a/react-front-end/src/components/styles/variables.scss
+++ b/react-front-end/src/components/styles/variables.scss
@@ -5,6 +5,7 @@ $inactive-opacity: 0.15;
 
 $white: #fff;
 $white-inactive: #ffffffb4;
+$white-opacity: #48dbfb40;
 $white-active: #ffffffe3;
 $black: #000;
 $black-active: rgba(0, 0, 0, 0.938);
