--- a/react-front-end/src/components/styles/variables.scss
+++ b/react-front-end/src/components/styles/variables.scss
@@ -5,7 +5,6 @@ $inactive-opacity: 0.15;
 
 $white: #fff;
 $white-inactive: #ffffffb4;
-$white-opacity: #48dbfb40;
 $white-active: #ffffffe3;
 $black: #000;
 $black-active: rgba(0, 0, 0, 0.938);
@@ -15,6 +14,8 @@ $dark-background: #0c1824;
 $dark-grey-background: #0e0f0f;
 $dark-grey-background-opacity: #0e0f0fef;
 $accent: #1DE9B6;
+$accent-opacity: #48dafb5b;
+$accent-opacity-dark: #48dafb32;
 $accent-red: #BA3B61;
 
 $weeks-colors: #54a0ff, #48dbfb, #1dd1a1, #5f27cd;
