--- a/react-front-end/src/components/LeftDatas/LeftData.scss
+++ b/react-front-end/src/components/LeftDatas/LeftData.scss
@@ -37,12 +37,27 @@ direction: rtl;
     scrollbar-color: $dark-grey-background-opacity $white-inactive;
   }
 
-  .wordCloud {
-    background: $white-opacity;
+  .dataContainer {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-content: flex-start;
+    background: $accent-opacity-dark;
     width: 80%;
+    height: 300px;
     border-radius: 20px;
     box-shadow: 13px 15px 15px -3px rgba(0, 0, 0, 0.404);
-    overflow: visible;
+    margin: 1vh .4vh 1vh 9vh;
+    transition: 0.3s;
 
+    &:hover {
+      box-shadow: 20px 20px 10px -2px rgba(0, 0, 0, 0.74);
+      background-color: $accent-opacity;
+      color: $black-active;
+    }
+
+    .wordCloud {
+      // display:flex;
+    }
   }
 }
