Update building seeds and update building component

--- a/react-front-end/src/components/App.css
+++ b/react-front-end/src/components/App.css
@@ -83,3 +83,10 @@ nav {
   flex-flow: row;
   flex-direction: row;
 }
+
+.building-header {
+  display: flex;
+  align-items: flex-start;
+  flex-direction: row;
+  justify-content: center;
+}
