Add req params to buildings id route and link building favourites to details page

--- a/react-front-end/src/components/App.css
+++ b/react-front-end/src/components/App.css
@@ -90,3 +90,9 @@ nav {
   flex-direction: row;
   justify-content: center;
 }
+
+.profile-container {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+}
