--- a/react-front-end/src/components/App.css
+++ b/react-front-end/src/components/App.css
@@ -37,10 +37,6 @@
   }
 }
 
-.leaflet-container {
-  width: 100%;
-  height: 100vh;
-}
 
 nav {
   display: flex;
@@ -89,4 +85,9 @@ nav {
   align-items: flex-start;
   flex-direction: row;
   justify-content: center;
+}
+
+.amenities-map {
+  width: 100px;
+  height: 100px;
 }
