--- a/react-front-end/src/components/App.css
+++ b/react-front-end/src/components/App.css
@@ -9,7 +9,7 @@
 }
 
 .leaflet-container {
-  width: 100vw;
+  width: 100%;
   height: 100vh;
 }
 
@@ -87,7 +87,7 @@ nav {
   justify-content: center;
 }
 
-.amenities-map {
-  width: 100px;
+.amenities-map { 
+  width: 500px;
   height: 100px;
 }
