--- a/react-front-end/src/index.scss
+++ b/react-front-end/src/index.scss
@@ -27,11 +27,11 @@ body {
 }
 
 .container {
-  max-width: 500px;
+  max-width: 800px;
   margin: 30px auto;
   overflow: auto;
   min-height: 300px;
-  border: 1px solid steelblue;
+  border: 1px solid #10192A;
   padding: 30px;
   border-radius: 5px;
 }
@@ -92,7 +92,7 @@ body {
 }
 
 .event.reminder {
-  border-left: 5px solid green;
+  border-left: 5px solid #60AEBF;
 }
 
 .event h3 {
