--- a/react-front-end/src/components/App.css
+++ b/react-front-end/src/components/App.css
@@ -8,6 +8,11 @@
   pointer-events: none;
 }
 
+.leaflet-container {
+  width: 100%;
+  height: 100vh;
+}
+
 /* css for map page starts here */
 .map-left {
   flex: 2;
