--- a/react-front-end/src/components/Forecast/forecast.scss
+++ b/react-front-end/src/components/Forecast/forecast.scss
@@ -3,7 +3,7 @@ table {
   margin: 25px auto;
   border-collapse: collapse;
   border: 1px solid #eee;
-  border-bottom: 2px solid #60AEBF;
+  border-bottom: 2px solid #5abbcc;
   box-shadow: 0px 0px 20px rgba(0,0,0,0.10),
      0px 10px 20px rgba(0,0,0,0.05),
      0px 20px 20px rgba(0,0,0,0.05),
@@ -25,7 +25,7 @@ table {
     text-align: center;
   }
   th {
-    background: #60AEBF;
+    background: #5abbcc;
     color: #fff;
     text-transform: uppercase;
     font-size: 12px;
@@ -37,3 +37,7 @@ table {
 
 // 55BCCD
 // 60AEBF
+// 5abbcc
+// logo: 6dc8d9 or fff
+// links: 061d29 or fff
+// hover links 092a3c
